--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -7,6 +7,7 @@
     <script th:src="@{/js/menu/customCart.js}"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/allergyCheck.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/customCart.css}" rel="stylesheet">
 </head>
