--- a/src/main/resources/templates/chat/chat-room.html
+++ b/src/main/resources/templates/chat/chat-room.html
@@ -15,10 +15,12 @@
 
     <script th:src="@{/js/chat-room.js}"></script>
 
+
+
     <link th:href="@{/css/chat/chat-room.css}" rel="stylesheet">
 </head>
 <body>
-<h2>채팅방</h2>
+<h2>SANDIT</h2>
 <button id="backToChatListBtn" class="modal-back-btn">← </button>
 
 <!-- 로그인된 유저 정보 -->
