--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<h2>SAND-IT 톡</h2>
+<h2>SANDIT TALK</h2>
 
 <div>
     <input type="text" id="roomName" placeholder="채팅방 이름 입력">
