--- a/src/main/resources/static/css/modal-chat.css
+++ b/src/main/resources/static/css/modal-chat.css
@@ -101,3 +101,24 @@ body, ul, li {
 #modalContentWrapper::-webkit-scrollbar-thumb:hover {
     background: #666;
 }
+.chat-item {
+    position: relative;
+    display: inline-block;
+}
+
+.chat-badge {
+    display: none; /* JS에서 show/hide */
+    background-color: red;
+    color: white;
+    font-size: 10px;
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    line-height: 14px;
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 10;
+}
+
